@startuml

title PPDB Sekolah Bhinneka - Class Diagram

top to bottom direction

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam roundcorner 10
skinparam packageStyle rectangle
skinparam linetype ortho

hide circle

package "App\\Models" {

    class User {
        == Attributes ==
        +name: string
        +email: string
        +whatsapp: string
        +password: string
        +role: string

        == Methods ==
        +student(): HasOne
        +pendaftaran(): HasOne
        +isAdmin(): bool
        +isStudent(): bool
    }

    class Siswa {
        == Attributes ==
        +user_id: int
        +nama_lengkap: string
        +nama_panggilan: string
        +nisn: string
        +tempat_lahir: string
        +tanggal_lahir: date
        +jenis_kelamin: string
        +agama: string
        +alamat_jalan: string
        +kota_kabupaten: string
        +provinsi: string
        +asal_sekolah: string
        +jenjang: string
        +kewarganegaraan: string
        +anak_ke: int
        +jumlah_saudara_kandung: int

        == Methods ==
        +user(): BelongsTo
        +pendaftaran(): HasOne
    }

    class Pendaftaran {
        == Attributes ==
        +nomor_pendaftaran: string
        +user_id: int
        +student_id: int
        +status: string
        +submitted_at: datetime
        +alasan_penolakan: string

        == Methods ==
        +generateNomorPendaftaran(): string
        +user(): BelongsTo
        +student(): BelongsTo
        +ayah(): HasOne
        +ibu(): HasOne
        +wali(): HasOne
        +isFormComplete(): bool
        +hasSubmittedOnline(): bool
        +canEditForms(): bool
        +isVerified(): bool
    }

    together {

        class Ayah {
            == Attributes ==
            +pendaftaran_id: int
            +nama_lengkap: string
            +tempat_lahir: string
            +tanggal_lahir: date
            +agama: string
            +kewarganegaraan: string
            +pendidikan: string
            +pekerjaan: string
            +alamat: string
            +no_telp: string
            +nik: string
            +penghasilan: decimal

            == Methods ==
            +pendaftaran(): BelongsTo
        }

        class Ibu {
            == Attributes ==
            +pendaftaran_id: int
            +nama_lengkap: string
            +tempat_lahir: string
            +tanggal_lahir: date
            +agama: string
            +kewarganegaraan: string
            +pendidikan: string
            +pekerjaan: string
            +alamat: string
            +no_telp: string
            +nik: string
            +penghasilan: decimal

            == Methods ==
            +pendaftaran(): BelongsTo
        }

        class Wali {
            == Attributes ==
            +pendaftaran_id: int
            +nama_lengkap: string
            +tempat_lahir: string
            +tanggal_lahir: date
            +agama: string
            +kewarganegaraan: string
            +pendidikan: string
            +pekerjaan: string
            +alamat: string
            +no_telp: string
            +nik: string
            +penghasilan: decimal
            +hubungan_kerabat: string

            == Methods ==
            +pendaftaran(): BelongsTo
        }
    }

    enum PendaftaranStatus {
        Belum Submit
        Menunggu Penyerahan Berkas
        Terverifikasi
        Ditolak
    }

    note right of Pendaftaran
      Nomor pendaftaran dibuat otomatis
      Format:
      PPDB-{tahun}-{urutan}
    end note

    note bottom of Pendaftaran
      Status Alur:
      1. Belum Submit
      2. Menunggu Penyerahan Berkas
      3. Terverifikasi
      4. Ditolak
    end note
}

User        "1" -- "0..1" Siswa
User        "1" -- "0..1" Pendaftaran
Siswa       "1" -- "0..1" Pendaftaran

Pendaftaran "1" -- "1" Ayah
Pendaftaran "1" -- "1" Ibu
Pendaftaran "1" -- "0..1" Wali

Pendaftaran ..> PendaftaranStatus

@enduml